plugins {
	id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'com.github.gmazzo.buildconfig' version '5.6.7'
    id 'tech.yanand.maven-central-publish' version '1.3.0'
}

java {
	withSourcesJar()
	withJavadocJar()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
			from components.java
			pom {
		        name = 'Ore3D-API'
		        description = "API for integrations to Ore Design's Ore3D"
                url = 'http://c.ore.design'
                licenses {
                    license {
                        name = 'GNU General Public License, Version 3'
                        url = 'https://www.gnu.org/licenses/gpl-3.0.en.html#license-text'
                    }
                }
                developers {
                    developer {
                        id = 'jbatista'
                        name = 'Jacob Batista'
                        email = 'jbatista@ore.design'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/Ore-Design/Ore3D-API.git'
                    developerConnection = 'scm:git:ssh://github.com/Ore-Design/Ore3D-API.git'
                    url = 'http://c.ore.design'
                }
            }
        }
    }
}

signing {
    useInMemoryPgpKeys(findProperty('signingKey'), findProperty('signingPassword'))
    sign publishing.publications.mavenJava
}

mavenCentral {
    authToken = (findProperty('sonatypeUsername') + ':' + findProperty('sonatypePassword')).bytes.encodeBase64().toString()
}

tasks.register('updateReadmeVersion') {
    def templateFile = file("$projectDir/TEMPLATE.md")
    def readmeFile = file("$projectDir/README.md")
    inputs.file(templateFile)
    outputs.file(readmeFile)

    def versionStr = project.version.toString()
    def readmeText = templateFile.getText('UTF-8')

    def updatedText = readmeText.replace("{{VERSION}}", versionStr)

    readmeFile.setText(updatedText, 'UTF-8')
}

sourceCompatibility = 21
targetCompatibility = 21

archivesBaseName = "ore3dapi"
group = "design.ore.api.ore3d"
version = "2.6.0"

repositories {
    mavenCentral()
}

buildConfig {
    className("ApiConstants")
    packageName("design.ore.api.ore3d")
    useJavaOutput()
    buildConfigField(String, 'VERSION', version)
}

dependencies {
    annotationProcessor "org.projectlombok:lombok:1.18.32"
    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'

    api "org.projectlombok:lombok:1.18.32"
    api "com.fasterxml.jackson.core:jackson-databind:2.17.0"
    api "com.fasterxml.jackson.core:jackson-annotations:2.17.0"
    api "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0"
	api 'com.jfoenix:jfoenix:9.0.10'
	api 'org.controlsfx:controlsfx:11.2.0'
	api 'ch.qos.logback:logback-classic:1.5.19'
	api 'ch.qos.logback:logback-core:1.5.19'
    api 'com.google.auto.service:auto-service:1.1.1'
    api "org.apache.httpcomponents:httpcore:4.4.16"
    api "org.apache.httpcomponents:httpclient:4.5.14"
	api 'org.apache.httpcomponents:httpmime:4.5.14'
    api 'org.fxmisc.easybind:easybind:1.0.3'
}
